Assign_IR/y.output

state 0
	$accept: .Code $end 
	rust: .    (5)

	FN  shift 7
	STRUCT  shift 3
	USE  shift 5
	.  reduce 5 (src line 287)

	Code  goto 1
	rust  goto 2
	item_or_view_item  goto 4
	item_fn  goto 6

state 1
	$accept:  Code.$end 

	$end  accept
	.  error


state 2
	Code:  rust.    (1)

	.  reduce 1 (src line 280)


state 3
	rust:  STRUCT.IDENTIFIER struct_expr rust 

	IDENTIFIER  shift 8
	.  error


state 4
	rust:  item_or_view_item.rust 
	rust: .    (5)

	FN  shift 7
	STRUCT  shift 3
	USE  shift 5
	.  reduce 5 (src line 287)

	rust  goto 9
	item_or_view_item  goto 4
	item_fn  goto 6

state 5
	rust:  USE.func_identifier ';' rust 

	IDENTIFIER  shift 11
	.  error

	func_identifier  goto 10

state 6
	item_or_view_item:  item_fn.    (6)

	.  reduce 6 (src line 291)


state 7
	item_fn:  FN.IDENTIFIER fn_decl inner_attrs_and_block 

	IDENTIFIER  shift 12
	.  error


state 8
	rust:  STRUCT IDENTIFIER.struct_expr rust 

	SYM_OPEN_CURLY  shift 14
	.  error

	struct_expr  goto 13

state 9
	rust:  item_or_view_item rust.    (3)

	.  reduce 3 (src line 285)


state 10
	rust:  USE func_identifier.';' rust 

	';'  shift 15
	.  error


state 11
	func_identifier:  IDENTIFIER.    (192)
	func_identifier:  IDENTIFIER.SYM_COLCOL func_identifier 
	func_identifier:  IDENTIFIER.'!' 

	SYM_COLCOL  shift 16
	'!'  shift 17
	.  reduce 192 (src line 857)


state 12
	item_fn:  FN IDENTIFIER.fn_decl inner_attrs_and_block 

	SYM_OPEN_ROUND  shift 20
	.  error

	fn_decl  goto 18
	fn_args  goto 19

state 13
	rust:  STRUCT IDENTIFIER struct_expr.rust 
	rust: .    (5)

	FN  shift 7
	STRUCT  shift 3
	USE  shift 5
	.  reduce 5 (src line 287)

	rust  goto 21
	item_or_view_item  goto 4
	item_fn  goto 6

state 14
	struct_expr:  SYM_OPEN_CURLY.field_inits default_field_init SYM_CLOSE_CURLY 
	maybe_mut: .    (108)

	MUT  shift 25
	.  reduce 108 (src line 631)

	maybe_mut  goto 24
	field_inits  goto 22
	field_init  goto 23

state 15
	rust:  USE func_identifier ';'.rust 
	rust: .    (5)

	FN  shift 7
	STRUCT  shift 3
	USE  shift 5
	.  reduce 5 (src line 287)

	rust  goto 26
	item_or_view_item  goto 4
	item_fn  goto 6

state 16
	func_identifier:  IDENTIFIER SYM_COLCOL.func_identifier 

	IDENTIFIER  shift 11
	.  error

	func_identifier  goto 27

state 17
	func_identifier:  IDENTIFIER '!'.    (194)

	.  reduce 194 (src line 873)


state 18
	item_fn:  FN IDENTIFIER fn_decl.inner_attrs_and_block 

	SYM_OPEN_CURLY  shift 29
	.  error

	inner_attrs_and_block  goto 28

state 19
	fn_decl:  fn_args.ret_ty 
	ret_ty: .    (18)

	OP_INSIDE  shift 31
	.  reduce 18 (src line 327)

	ret_ty  goto 30

state 20
	fn_args:  SYM_OPEN_ROUND.maybe_args_general SYM_CLOSE_ROUND 
	maybe_args_general: .    (11)

	IDENTIFIER  shift 36
	.  reduce 11 (src line 311)

	maybe_args_general  goto 32
	args_general  goto 33
	arg_general  goto 34
	pat  goto 35

state 21
	rust:  STRUCT IDENTIFIER struct_expr rust.    (2)

	.  reduce 2 (src line 283)


state 22
	struct_expr:  SYM_OPEN_CURLY field_inits.default_field_init SYM_CLOSE_CURLY 
	field_inits:  field_inits.',' field_init 
	default_field_init: .    (201)

	','  shift 38
	.  reduce 201 (src line 898)

	default_field_init  goto 37

state 23
	field_inits:  field_init.    (196)

	.  reduce 196 (src line 886)


state 24
	field_init:  maybe_mut.IDENTIFIER ':' expr 

	IDENTIFIER  shift 39
	.  error


state 25
	maybe_mut:  MUT.    (107)

	.  reduce 107 (src line 629)


state 26
	rust:  USE func_identifier ';' rust.    (4)

	.  reduce 4 (src line 286)


state 27
	func_identifier:  IDENTIFIER SYM_COLCOL func_identifier.    (193)

	.  reduce 193 (src line 866)


state 28
	item_fn:  FN IDENTIFIER fn_decl inner_attrs_and_block.    (7)

	.  reduce 7 (src line 295)


state 29
	inner_attrs_and_block:  SYM_OPEN_CURLY.maybe_inner_attrs maybe_stmts SYM_CLOSE_CURLY 
	maybe_inner_attrs: .    (21)

	SHEBANG  shift 43
	.  reduce 21 (src line 336)

	maybe_inner_attrs  goto 40
	inner_attrs  goto 41
	inner_attr  goto 42

state 30
	fn_decl:  fn_args ret_ty.    (8)

	.  reduce 8 (src line 301)


state 31
	ret_ty:  OP_INSIDE.'!' 
	ret_ty:  OP_INSIDE.ty 
	ret_ty:  OP_INSIDE.SYM_OPEN_ROUND SYM_CLOSE_ROUND 

	IDENTIFIER  shift 55
	SYM_OPEN_SQ  shift 53
	SYM_OPEN_ROUND  shift 46
	VAR_TYPE  shift 54
	OP_POWER  shift 51
	'!'  shift 44
	'&'  shift 50
	'*'  shift 49
	'~'  shift 48
	.  error

	ty  goto 45
	path  goto 47
	var_types  goto 52

state 32
	fn_args:  SYM_OPEN_ROUND maybe_args_general.SYM_CLOSE_ROUND 

	SYM_CLOSE_ROUND  shift 56
	.  error


state 33
	maybe_args_general:  args_general.    (10)
	args_general:  args_general.',' arg_general 

	','  shift 57
	.  reduce 10 (src line 309)


state 34
	args_general:  arg_general.    (12)

	.  reduce 12 (src line 314)


state 35
	arg_general:  pat.':' ty 

	':'  shift 58
	.  error


state 36
	pat:  IDENTIFIER.    (98)

	.  reduce 98 (src line 606)


state 37
	struct_expr:  SYM_OPEN_CURLY field_inits default_field_init.SYM_CLOSE_CURLY 

	SYM_CLOSE_CURLY  shift 59
	.  error


state 38
	field_inits:  field_inits ','.field_init 
	default_field_init:  ','.    (199)
	default_field_init:  ','.OP_DOTDOT expr 
	maybe_mut: .    (108)

	MUT  shift 25
	SYM_CLOSE_CURLY  reduce 199 (src line 895)
	OP_DOTDOT  shift 61
	.  reduce 108 (src line 631)

	maybe_mut  goto 24
	field_init  goto 60

state 39
	field_init:  maybe_mut IDENTIFIER.':' expr 

	':'  shift 62
	.  error


state 40
	inner_attrs_and_block:  SYM_OPEN_CURLY maybe_inner_attrs.maybe_stmts SYM_CLOSE_CURLY 
	maybe_stmts: .    (42)

	IDENTIFIER  shift 89
	FOR  shift 83
	RETURN  shift 84
	SYM_OPEN_ROUND  shift 85
	SYM_OPEN_CURLY  shift 109
	LIT_CHAR  shift 98
	FLOAT  shift 102
	LIT_FLOAT_UNSUFFIXED  shift 103
	LIT_INT_UNSUFFIXED  shift 101
	LITERAL_STR  shift 104
	LITERAL_CHAR  shift 105
	LIT_UINT  shift 100
	VAR_TYPE  shift 108
	LIT_INT  shift 99
	OP_ANDMUT  shift 92
	BREAK  shift 97
	CONTINUE  shift 94
	FALSE  shift 107
	FN  shift 7
	IF  shift 80
	LET  shift 70
	LOOP  shift 82
	MATCH  shift 79
	TRUE  shift 106
	UNSAFE  shift 95
	WHILE  shift 81
	'!'  shift 90
	'&'  shift 91
	.  reduce 42 (src line 377)

	item_or_view_item  goto 67
	func_identifier  goto 93
	item_fn  goto 6
	maybe_stmts  goto 63
	lit  goto 88
	stmts  goto 64
	stmt  goto 65
	let  goto 66
	expr_stmt  goto 68
	expr  goto 69
	expr_match  goto 71
	expr_if  goto 72
	expr_while  goto 73
	expr_loop  goto 74
	expr_for  goto 75
	expr_return  goto 76
	exp  goto 86
	block  goto 96
	round_exp  goto 77
	assignment  goto 78
	hole  goto 87

state 41
	maybe_inner_attrs:  inner_attrs.    (20)
	inner_attrs:  inner_attrs.inner_attr 

	SHEBANG  shift 43
	.  reduce 20 (src line 334)

	inner_attr  goto 110

state 42
	inner_attrs:  inner_attr.    (22)

	.  reduce 22 (src line 339)


state 43
	inner_attr:  SHEBANG.'[' meta_item ']' 

	'['  shift 111
	.  error


state 44
	ret_ty:  OP_INSIDE '!'.    (15)

	.  reduce 15 (src line 323)


state 45
	ret_ty:  OP_INSIDE ty.    (16)

	.  reduce 16 (src line 325)


state 46
	ret_ty:  OP_INSIDE SYM_OPEN_ROUND.SYM_CLOSE_ROUND 
	ty:  SYM_OPEN_ROUND.tys SYM_CLOSE_ROUND 

	IDENTIFIER  shift 55
	SYM_OPEN_SQ  shift 53
	SYM_OPEN_ROUND  shift 115
	SYM_CLOSE_ROUND  shift 112
	VAR_TYPE  shift 54
	OP_POWER  shift 51
	'&'  shift 50
	'*'  shift 49
	'~'  shift 48
	.  error

	ty  goto 114
	tys  goto 113
	path  goto 47
	var_types  goto 52

state 47
	ty:  path.    (101)

	.  reduce 101 (src line 620)


state 48
	ty:  '~'.ty 

	IDENTIFIER  shift 55
	SYM_OPEN_SQ  shift 53
	SYM_OPEN_ROUND  shift 115
	VAR_TYPE  shift 54
	OP_POWER  shift 51
	'&'  shift 50
	'*'  shift 49
	'~'  shift 48
	.  error

	ty  goto 116
	path  goto 47
	var_types  goto 52

state 49
	ty:  '*'.maybe_mut ty 
	maybe_mut: .    (108)

	MUT  shift 25
	.  reduce 108 (src line 631)

	maybe_mut  goto 117

state 50
	ty:  '&'.maybe_mut ty 
	maybe_mut: .    (108)

	MUT  shift 25
	.  reduce 108 (src line 631)

	maybe_mut  goto 118

state 51
	ty:  OP_POWER.maybe_mut ty 
	maybe_mut: .    (108)

	MUT  shift 25
	.  reduce 108 (src line 631)

	maybe_mut  goto 119

state 52
	path:  var_types.    (111)

	.  reduce 111 (src line 639)


state 53
	path:  SYM_OPEN_SQ.var_types maybe_size SYM_CLOSE_SQ 

	IDENTIFIER  shift 55
	VAR_TYPE  shift 54
	.  error

	var_types  goto 120

state 54
	var_types:  VAR_TYPE.    (109)

	.  reduce 109 (src line 635)


state 55
	var_types:  IDENTIFIER.    (110)

	.  reduce 110 (src line 637)


state 56
	fn_args:  SYM_OPEN_ROUND maybe_args_general SYM_CLOSE_ROUND.    (9)

	.  reduce 9 (src line 305)


state 57
	args_general:  args_general ','.arg_general 

	IDENTIFIER  shift 36
	.  error

	arg_general  goto 121
	pat  goto 35

state 58
	arg_general:  pat ':'.ty 

	IDENTIFIER  shift 55
	SYM_OPEN_SQ  shift 53
	SYM_OPEN_ROUND  shift 115
	VAR_TYPE  shift 54
	OP_POWER  shift 51
	'&'  shift 50
	'*'  shift 49
	'~'  shift 48
	.  error

	ty  goto 122
	path  goto 47
	var_types  goto 52

state 59
	struct_expr:  SYM_OPEN_CURLY field_inits default_field_init SYM_CLOSE_CURLY.    (195)

	.  reduce 195 (src line 882)


state 60
	field_inits:  field_inits ',' field_init.    (197)

	.  reduce 197 (src line 888)


state 61
	default_field_init:  ',' OP_DOTDOT.expr 

	IDENTIFIER  shift 89
	SYM_OPEN_ROUND  shift 85
	SYM_OPEN_CURLY  shift 109
	LIT_CHAR  shift 98
	FLOAT  shift 102
	LIT_FLOAT_UNSUFFIXED  shift 103
	LIT_INT_UNSUFFIXED  shift 101
	LITERAL_STR  shift 104
	LITERAL_CHAR  shift 105
	LIT_UINT  shift 100
	VAR_TYPE  shift 108
	LIT_INT  shift 99
	OP_ANDMUT  shift 92
	BREAK  shift 97
	CONTINUE  shift 94
	FALSE  shift 107
	TRUE  shift 106
	UNSAFE  shift 95
	'!'  shift 90
	'&'  shift 91
	.  error

	func_identifier  goto 93
	lit  goto 88
	expr  goto 123
	exp  goto 86
	block  goto 96
	round_exp  goto 77
	assignment  goto 78
	hole  goto 87

state 62
	field_init:  maybe_mut IDENTIFIER ':'.expr 

	IDENTIFIER  shift 89
	SYM_OPEN_ROUND  shift 85
	SYM_OPEN_CURLY  shift 109
	LIT_CHAR  shift 98
	FLOAT  shift 102
	LIT_FLOAT_UNSUFFIXED  shift 103
	LIT_INT_UNSUFFIXED  shift 101
	LITERAL_STR  shift 104
	LITERAL_CHAR  shift 105
	LIT_UINT  shift 100
	VAR_TYPE  shift 108
	LIT_INT  shift 99
	OP_ANDMUT  shift 92
	BREAK  shift 97
	CONTINUE  shift 94
	FALSE  shift 107
	TRUE  shift 106
	UNSAFE  shift 95
	'!'  shift 90
	'&'  shift 91
	.  error

	func_identifier  goto 93
	lit  goto 88
	expr  goto 124
	exp  goto 86
	block  goto 96
	round_exp  goto 77
	assignment  goto 78
	hole  goto 87

state 63
	inner_attrs_and_block:  SYM_OPEN_CURLY maybe_inner_attrs maybe_stmts.SYM_CLOSE_CURLY 

	SYM_CLOSE_CURLY  shift 125
	.  error


state 64
	maybe_stmts:  stmts.    (41)
	stmts:  stmts.stmt 

	IDENTIFIER  shift 89
	FOR  shift 83
	RETURN  shift 84
	SYM_OPEN_ROUND  shift 85
	SYM_OPEN_CURLY  shift 109
	LIT_CHAR  shift 98
	FLOAT  shift 102
	LIT_FLOAT_UNSUFFIXED  shift 103
	LIT_INT_UNSUFFIXED  shift 101
	LITERAL_STR  shift 104
	LITERAL_CHAR  shift 105
	LIT_UINT  shift 100
	VAR_TYPE  shift 108
	LIT_INT  shift 99
	OP_ANDMUT  shift 92
	BREAK  shift 97
	CONTINUE  shift 94
	FALSE  shift 107
	FN  shift 7
	IF  shift 80
	LET  shift 70
	LOOP  shift 82
	MATCH  shift 79
	TRUE  shift 106
	UNSAFE  shift 95
	WHILE  shift 81
	'!'  shift 90
	'&'  shift 91
	.  reduce 41 (src line 375)

	item_or_view_item  goto 67
	func_identifier  goto 93
	item_fn  goto 6
	lit  goto 88
	stmt  goto 126
	let  goto 66
	expr_stmt  goto 68
	expr  goto 69
	expr_match  goto 71
	expr_if  goto 72
	expr_while  goto 73
	expr_loop  goto 74
	expr_for  goto 75
	expr_return  goto 76
	exp  goto 86
	block  goto 96
	round_exp  goto 77
	assignment  goto 78
	hole  goto 87

state 65
	stmts:  stmt.    (44)

	.  reduce 44 (src line 382)


state 66
	stmt:  let.';' 

	';'  shift 127
	.  error


state 67
	stmt:  item_or_view_item.';' 

	';'  shift 128
	.  error


state 68
	stmt:  expr_stmt.    (47)

	.  reduce 47 (src line 388)


state 69
	stmt:  expr.';' 

	';'  shift 129
	.  error


state 70
	let:  LET.maybe_mut pat maybe_ty_ascription maybe_init_expr 
	maybe_mut: .    (108)

	MUT  shift 25
	.  reduce 108 (src line 631)

	maybe_mut  goto 130

state 71
	expr_stmt:  expr_match.    (49)

	.  reduce 49 (src line 393)


state 72
	expr_stmt:  expr_if.    (50)

	.  reduce 50 (src line 395)


state 73
	expr_stmt:  expr_while.    (51)

	.  reduce 51 (src line 396)


state 74
	expr_stmt:  expr_loop.    (52)

	.  reduce 52 (src line 397)


state 75
	expr_stmt:  expr_for.    (53)

	.  reduce 53 (src line 398)


state 76
	expr_stmt:  expr_return.    (54)

	.  reduce 54 (src line 399)


state 77
	expr:  round_exp.    (158)
	exp:  round_exp.'-' round_exp 
	exp:  round_exp.'+' round_exp 
	exp:  round_exp.'&' round_exp 
	exp:  round_exp.'|' round_exp 
	exp:  round_exp.'^' round_exp 
	exp:  round_exp.'/' round_exp 
	exp:  round_exp.'*' round_exp 
	exp:  round_exp.'>' round_exp 
	exp:  round_exp.'<' round_exp 
	exp:  round_exp.'%' round_exp 
	exp:  round_exp.'.' round_exp 
	exp:  round_exp.OP_RSHIFT round_exp 
	exp:  round_exp.OP_LSHIFT round_exp 
	exp:  round_exp.OP_ANDAND round_exp 
	exp:  round_exp.OP_OROR round_exp 
	exp:  round_exp.OP_POWER round_exp 

	OP_RSHIFT  shift 142
	OP_LSHIFT  shift 143
	OP_ANDAND  shift 144
	OP_OROR  shift 145
	OP_POWER  shift 146
	'<'  shift 139
	'>'  shift 138
	'|'  shift 134
	'^'  shift 135
	'&'  shift 133
	'+'  shift 132
	'-'  shift 131
	'.'  shift 141
	'*'  shift 137
	'/'  shift 136
	'%'  shift 140
	.  reduce 158 (src line 731)


state 78
	expr:  assignment.    (159)

	.  reduce 159 (src line 733)

